[package]
name = "rsor"
version = "0.1.3"
description = "Reusable slice of references"
readme = "README.md"
categories = ["data-structures", "rust-patterns"]
keywords = ["slice", "reference", "lifetime"]
repository = "https://github.com/mgeier/rsor"
authors = ["Matthias Geier <Matthias.Geier@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
